--- a/f/fi/fin/find-an-article.com.html
+++ b/f/fi/fin/find-an-article.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the find-an-article.com privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619033716id_/http%3A//www.find-an-article.com/index.php%3Fpagedb%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the find-an-article.com privacy policy that was archived on 2009-10-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091027181038id_/http%3A//www.find-an-article.com/index.php%3Fpagedb%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -129,9 +129,6 @@ document.write('<a href="' + 'mailto:' + user + '@' + domain + '.' + suffix + '"
 
 <tbody><tr><td width="177" valign="top" background="/images/newsletterbg.gif">
 
-<div style="display:none"> <p align="center"><label id="flags"> 
-<a href="http://www.find-an-article.com/fr/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_fr.gif" alt="Français" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/es/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_es.gif" alt="Español" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/ja/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_ja.gif" alt="日本語" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/ar/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_ar.gif" alt="[أربيك]" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/it/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_it.gif" alt="Italiano" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/de/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_de.gif" alt="Deutsch" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/zh-CN/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_zh-chinese.gif" alt="汉语" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/zh-TW/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_zh-chinese.gif" alt="漢語" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/nl/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_nl.gif" alt="Nederlands" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/ko/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_ko.gif" alt="한국어" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/pt/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_pt.gif" alt="Port" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/ru/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_ru.gif" alt="Русско" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/el/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_el.gif" alt="Ελληνικά" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/id/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_id.gif" alt="Indo" width="18" height="12" border="0"></a> <a href="http://www.find-an-article.com/index.php?pagedb=privacy"><img src="http://www.find-an-article.com/websitetranslator/images/flag_en.gif" alt="English - Original language" width="18" height="12" border="0"></a><a href="http://www.websitestranslator.com/" target="_blank" style="display:none;">website translator</a>
-</label></p> </div> 
 
 <hr>
 
@@ -168,7 +165,7 @@ document.write('<a href="' + 'mailto:' + user + '@' + domain + '.' + suffix + '"
 
 
 
-<hr><a target="_blank" href="http://www.find-an-article.com/sitemap.xml" class="bodylinks1">Sitemap</a><br><a target="_blank" href="http://www.find-an-article.com/arsitemap.xml" class="bodylinks1">Arabic</a><br><a target="_blank" href="http://www.find-an-article.com/zhsitemap.xml" class="bodylinks1">Chinese (Simplified)</a><br><a target="_blank" href="http://www.find-an-article.com/ztsitemap.xml" class="bodylinks1">Chinese (Traditional)</a><br><a target="_blank" href="http://www.find-an-article.com/nlsitemap.xml" class="bodylinks1">Dutch</a><br><a target="_blank" href="http://www.find-an-article.com/frsitemap.xml" class="bodylinks1">French</a><br><a target="_blank" href="http://www.find-an-article.com/desitemap.xml" class="bodylinks1">German</a><br><a target="_blank" href="http://www.find-an-article.com/itsitemap.xml" class="bodylinks1">Italian</a><br><a target="_blank" href="http://www.find-an-article.com/jasitemap.xml" class="bodylinks1">Japanese</a><br><a target="_blank" href="http://www.find-an-article.com/kositemap.xml" class="bodylinks1">Korean</a><br><a target="_blank" href="http://www.find-an-article.com/ptsitemap.xml" class="bodylinks1">Portuguese</a><br><a target="_blank" href="http://www.find-an-article.com/rusitemap.xml" class="bodylinks1">Russian</a><br><a target="_blank" href="http://www.find-an-article.com/essitemap.xml" class="bodylinks1">Spanish</a><br><a href="/index.php?page=allcategory&amp;rss=show&amp;i=s" class="bodylinks1">RSS Feeds</a><a href="/index.php?page=allcategory&amp;rss=show" title="See RSS Feeds for privacy Find-an-Article.com">
+<hr><a target="_blank" href="http://www.find-an-article.com/sitemap.xml" class="bodylinks1">Sitemap</a><br><a href="/index.php?page=allcategory&amp;rss=show&amp;i=s" class="bodylinks1">RSS Feeds</a><a href="/index.php?page=allcategory&amp;rss=show" title="See RSS Feeds for privacy Find-an-Article.com">
 					<img src="/images/rss.jpg" border="0" style="margin-bottom:-2px;" alt="See As RSS">				</a><p>
 </p><hr><table width="100%" border="0" cellspacing="0" cellpadding="0">
 							
@@ -181,29 +178,6 @@ document.write('<a href="' + 'mailto:' + user + '@' + domain + '.' + suffix + '"
 				              				              <tr> 
 				                <td bgcolor="#FFFFFF"><img src="/images/trans.gif" width="1" height="5"></td>
 				              </tr>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -227,6 +201,8 @@ document.write('<a href="' + 'mailto:' + user + '@' + domain + '.' + suffix + '"
       <img border="0" src="http://www.find-an-article.com/recommended/free-web-content.jpg" align="center" alt="Rewrite PLR Articles with Instant Article Wizard's unique 15 minute solution. Avoid duplicate content penalties"></a></strong></p>
 </td>
 </tr>
+<tr><td>
+</td></tr>
 
 
  				              				                    <tr>
@@ -253,7 +229,7 @@ document.write('<a href="' + 'mailto:' + user + '@' + domain + '.' + suffix + '"
 <td class="footer"><center>| 
 <a href="http://www.find-an-article.com"><strong>Home</strong></a> | <a href="http://www.find-an-article.com/articles/"><strong><u>Free Web Content Articles</u></strong></a> | <a href="/index.php?pagedb=privacy"><strong><u>Privacy Policy</u></strong></a> | <a href="/index.php?page=allarticlesforsitemap"><strong><u>All Articles</u></strong></a> | <a href="http://www.find-an-article.com/sitemap.xml"><strong><u>Sitemap XML</u></strong></a> | <a target="_blank" href="http://www.thmg.com/free/index.php"><strong><u>Website Promotion</u></strong></a> | <a href="http://www.gamedealfinder.com/deals/PS3" target="_blank"><strong>PS3
 Deals</strong></a> | <a href="http://www.gamedealfinder.com/deals/Nintendo-Wii" target="_blank"><strong>Wii
-for Sale</strong></a> | <a target="_blank" href="http://fearofflying.toptips101.com"><strong><u>Overcome a Fear of Flying</u></strong></a><p></p></center>
+for Sale</strong></a> | <a target="_blank" href="http://fearofflying.toptips101.com"><strong><u>Overcome a Fear of Flying</u></strong></a>| <a target="_blank" href="http://www.totalvideoconverters.com"><strong><u>Total Video Converters</u></strong></a><p></p></center>
 
 
 
