--- a/c/ch/che/cheekymunkey.co.uk.html
+++ b/c/ch/che/cheekymunkey.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cheekymunkey.co.uk privacy policy that was archived on 2009-02-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090211212738id_/http%3A//www.cheekymunkey.co.uk/page.asp%3Fsection%3D0001000100020003) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cheekymunkey.co.uk privacy policy that was archived on 2009-10-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091027195137id_/http%3A//www.cheekymunkey.co.uk/page.asp%3Fsection%3D0001000100020003) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
 <script language="JavaScript" src="library/js/tools.js" type="text/javascript"></script>
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta name="title" content="Cheeky Munkey » Privacy">
-<meta name="identifier" content="">
+<meta name="identifier" content="http://www.cheekymunkey.co.uk">
 <meta name="country" content="United Kingdom">
 <meta name="coverage" content="Worldwide">
 <meta name="Keywords" content="Cheeky Munkey » Privacy">
@@ -48,13 +48,13 @@
 				<div class="clear"></div>
 			</div>
 			<div id="nav">
-				<ul class="nav"><li><a href="?section=000100010001"><img class="nav off home" src="core_files/nav_home_off.gif" alt="Home"></a></li><li><a href="page.asp?section=000100010002"><img class="nav on" src="core_files/nav_about_us_on.gif" alt="About Us"></a></li><li><a href="page.asp?section=000100010003"><img class="nav off" src="core_files/nav_networks_off.gif" alt="Network installation"></a></li><li><a href="page.asp?section=000100010004"><img class="nav off" src="core_files/nav_support_off.gif" alt="Support"></a></li><li><a href="page.asp?section=000100010005"><img class="nav off" src="core_files/nav_software_off.gif" alt="Software"></a></li><li><a href="page.asp?section=000100010006"><img class="nav off" src="core_files/nav_procurement_off.gif" alt="Procurement"></a></li><li><a href="page.asp?section=000100010007"><img class="nav off" src="core_files/nav_web_services_off.gif" alt="Web Services"></a></li><li><a href="news.asp?section=000100010009"><img class="nav off news" src="core_files/nav_news_off.gif" alt="News"></a></li><li></li></ul>
+				<ul class="nav"><li><a href="default.asp?section=000100010001"><img class="nav off home" src="core_files/nav_home_off.gif" alt="Home"></a></li><li><a href="page.asp?section=000100010002"><img class="nav on" src="core_files/nav_about_us_on.gif" alt="ABOUT US"></a></li><li><a href="page.asp?section=000100010003"><img class="nav off" src="core_files/nav_networks_off.gif" alt="Network installation"></a></li><li><a href="page.asp?section=000100010004"><img class="nav off" src="core_files/nav_support_off.gif" alt="Support"></a></li><li><a href="page.asp?section=000100010005"><img class="nav off" src="core_files/nav_software_off.gif" alt="Software"></a></li><li><a href="page.asp?section=000100010006"><img class="nav off" src="core_files/nav_procurement_off.gif" alt="Procurement"></a></li><li><a href="page.asp?section=000100010007"><img class="nav off" src="core_files/nav_web_services_off.gif" alt="Web Services"></a></li><li><a href="news.asp?section=000100010009"><img class="nav off news" src="core_files/nav_news_off.gif" alt="News"></a></li><li></li></ul>
 			</div>
 			<div id="main" class="grey">
 				<div class="content"><img class="right" src="core_files/chimp.jpg" alt=""><h1><img src="core_files/ttl_networks.gif" alt="Getting connected (and staying that way)"></h1><br></div>
 			<div id="grey" class="clear left">
 				<div class="hp_col left">
-					<div class="colhead strong">Contact Info&nbsp;</div>
+					<div class="colhead strong">Contact Information&nbsp;</div>
 					<div id="pagenav">
 						
 <ul class="pagenav toplevel">
