--- a/m/ma/mas/masalanetwork.com.html
+++ b/m/ma/mas/masalanetwork.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the masalanetwork.com privacy policy that was archived on 2009-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617193816id_/http%3A//www.masalanetwork.com/index.php%3Fmenu%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the masalanetwork.com privacy policy that was archived on 2009-10-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091028010855id_/http%3A//www.masalanetwork.com/index.php%3Fmenu%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta name="description" content="Masala Network : Network of Indian Masala sites. Ultimate destination for indian dvd caps, movie captures, dvd captures">
@@ -67,9 +67,7 @@ win2.blur();
 </center></td>
 <td width="605" colspan="2" valign="bottom" align="middle"><a href="http://www.masalanetwork.com" target="_top"><img src="/images/mnetwork.gif" width="468" height="60" border="0" alt="IndianMasala.com"></a></td>
 <td colspan="5" align="right" valign="top"><img src="/images/top_r.gif" width="20" height="20"><br><br>
-<table border="0"><tbody><tr><td align="center">
-<a href="http://www.directdialindia.com" target="_top"><font color="red"><b>Direct Dial INDIA<br>20 cents/min</b></font></a>
-</td></tr></tbody></table>
+<table border="0"><tbody><tr><td align="center">&nbsp;</td></tr></tbody></table>
 &nbsp;&nbsp;
 </td>
 </tr>
@@ -144,22 +142,12 @@ win2.blur();
 <td width="600" valign="top">
 <br>
 <div align="center">
-<script type="text/javascript"><!--
-google_ad_client = "pub-0988332012329770";
-google_alternate_ad_url = "http://www.masalanetwork.com/alternatead.html";
-google_ad_width = 468;
-google_ad_height = 60;
-google_ad_format = "468x60_as";
-google_ad_type = "text_image";
-google_ad_channel ="";
-google_color_border = "FFCC00";
-google_color_bg = "F0F0E8";
-google_color_link = "000000";
-google_color_url = "008000";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<!-- BEGIN GN Ad Tag for Masala Network 468x60 ros -->
+<script language="JavaScript" type="text/javascript">
+if (typeof(gnm_ord)=='undefined') gnm_ord=Math.random()*10000000000000000; if (typeof(gnm_tile) == 'undefined') gnm_tile=1;
+document.write('<scr'+'ipt language="JavaScript" src="http://n4403ad.doubleclick.net/adj/gn.masalanetwork.com/ros;sect=ros;sz=468x60;tile='+(gnm_tile++)+';ord=' + gnm_ord + '?" type="text/javascript"></scr' + 'ipt>');
+</script><script language="JavaScript" src="http://n4403ad.doubleclick.net/adj/gn.masalanetwork.com/ros;sect=ros;sz=468x60;tile=1;ord=4935351871946967?" type="text/javascript"></script>
+<!-- END AD TAG -->
 </div>
    
 <br><p align="center"><font size="5"><b>Privacy Policy</b></font><br></p>
@@ -338,18 +326,17 @@ or your dealings with this Web site please send a mail to <a href="mailto:webmas
   <tr><td><img src="/images/w_dot1.gif" width="1" height="6"></td></tr>
  </tbody></table>
 
- 
-<table width="120" border="0">
-<tbody><tr><td>
-<a href="http://www.directdialindia.com/" target="_top"><img src="http://directdialindia.com/images/directdialindia_120x60.gif" width="120" height="60" border="0" alt="DirectDialINDIA"></a>
-</td></tr>
-</tbody></table>
-<!-- BEGIN GN Ad Tag for Masala Network 120x600 ros -->
-<script language="JavaScript" type="text/javascript">
-if (typeof(gnm_ord)=='undefined') gnm_ord=Math.random()*10000000000000000; if (typeof(gnm_tile) == 'undefined') gnm_tile=1;
-document.write('<scr'+'ipt language="JavaScript" src="http://n4403ad.doubleclick.net/adj/gn.masalanetwork.com/ros;sect=ros;sz=120x600;tile='+(gnm_tile++)+';ord=' + gnm_ord + '?" type="text/javascript"></scr' + 'ipt>');
-</script><script language="JavaScript" src="http://n4403ad.doubleclick.net/adj/gn.masalanetwork.com/ros;sect=ros;sz=120x600;tile=1;ord=6950332961325787?" type="text/javascript"></script>
-<!-- END AD TAG -->
+<script type="text/javascript"><!--
+google_ad_client = "pub-0988332012329770";
+/* MasalaNetwork.com 120x600 Scyscraper */
+google_ad_slot = "4386415134";
+google_ad_width = 120;
+google_ad_height = 600;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
 </td>
 
 <td width="1" bgcolor="#000000" valign="bottom"><hr size="1"></td>
