--- a/v/vi/via/viasat.com.html
+++ b/v/vi/via/viasat.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the viasat.com privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619085521id_/http%3A//www.viasat.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the viasat.com privacy policy that was archived on 2009-10-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091028083333id_/http%3A//www.viasat.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" class="js"><head>
   <title>
@@ -69,7 +69,7 @@
             </td>
             <td>
             <input type="text" name="keys" size="15"><input type="hidden" name="form_id" id="edit-search-form" value="search_form">
-            <input type="hidden" name="form_token" id="edit-search-theme-form-form-token" value="a1d02dd23763bebdd13934355d4d95cf">
+            <input type="hidden" name="form_token" id="edit-search-theme-form-form-token" value="6507c7cdd86f9804167ea083585b0d23">
             <!--<input type=text name="q" size="15" maxlength="256">-->
             </td>
             <td class="col3"><a href="javascript:document.searchnode.submit()" title="Site Search">
@@ -123,35 +123,35 @@
 </li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/linthicum-heights">Baltimore, MD (NSG, Information Assurance)</a></div></div>
 </li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/canberra-office">Canberra - (Government &amp; Defense Communications, Information Assurance)</a></div></div>
 </li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/cuyahoga-heights">Cleveland, OH (Efficient Channel Coding)</a></div></div>
-</li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/el-cajon">El Cajon, CA (Enerdyne Data Links)</a></div></div>
+</li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/el-cajon">El Cajon, CA (EnerLinks ISR Data Links)</a></div></div>
 </li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/about/vsat-networks-contacts">Enterprise Satellite Networks (VSAT) Contacts - Global Locations and Contact Information</a></div></div>
 </li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/germantown">Germantown, MD (Comsat Laboratories)</a></div></div>
 </li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/gilbert">Gilbert, AZ (US Monolithics, NSG)</a></div></div>
 </li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/lausanne">Lausanne, Switzerland (JAST Antenna Systems)</a></div></div>
 </li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/marlborough">Marlborough, MA (Boston area)</a></div></div>
-</li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/quincy">Quincy, MA (ICT, AcceleNet)</a></div></div>
+</li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/quincy">Quincy, MA (AcceleNet)</a></div></div>
 </li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/tampa">Tampa, FL</a></div></div>
 </li><li><div class="view-item view-item-about"><div class="view-field view-data-node-title"><a href="/company/locations/arlington">Washington, DC</a></div></div>
 </li></ul></div></div></div>
 	<h1>Upcoming Events</h1>
    	<ul>
    	<div class="view view-events"><div class="view-content view-content-events">
-	<li><a href="/events"><strong><span class="date-display-start">Aug 10</span><span class="date-display-separator"> - </span><span class="date-display-end">Aug 12</span>: </strong>AFCEA Ft. Bragg</a></li>
+	<li><a href="/events"><strong><span class="date-display-start">Oct 26</span><span class="date-display-separator"> - </span><span class="date-display-end">Oct 29</span>: </strong>ITC/USA 2009</a></li>
 	
 	
 
 
-	<li><a href="/events"><strong><span class="date-display-start">Aug 10</span><span class="date-display-separator"> - </span><span class="date-display-end">Aug 13</span>: </strong>AUVSI's Unmanned Systems North America 2009</a></li>
+	<li><a href="/events"><strong><span class="date-display-start">Oct 27</span><span class="date-display-separator"> - </span><span class="date-display-end">Oct 29</span>: </strong>NSISC Space INFOSEC Symposium </a></li>
 	
 	
 
 
-	<li><a href="/events"><strong><span class="date-display-start">Aug 10</span><span class="date-display-separator"> - </span><span class="date-display-end">Aug 13</span>: </strong>Small Satellite Conference</a></li>
+	<li><a href="/events"><strong><span class="date-display-start">Nov 02</span><span class="date-display-separator"> - </span><span class="date-display-end">Nov 04</span>: </strong>SOFEX 09</a></li>
 	
 	
 
 
-	<li><a href="/events"><strong><span class="date-display-start">Aug 18</span><span class="date-display-separator"> - </span><span class="date-display-end">Aug 20</span>: </strong>LandWarNet 2009</a></li>
+	<li><a href="/events"><strong><span class="date-display-start">Nov 03</span><span class="date-display-separator"> - </span><span class="date-display-end">Nov 05</span>: </strong>AFCEA TechNet Asia-Pacific</a></li>
 	
 	
 
