--- a/r/rb/rba/rba.gov.au.html
+++ b/r/rb/rba/rba.gov.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rba.gov.au privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619051728id_/http%3A//www.rba.gov.au/PrivacyStatement/index.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rba.gov.au privacy policy that was archived on 2009-10-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091028093904id_/http%3A//www.rba.gov.au/PrivacyStatement/index.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><!-- #BeginTemplate "/Templates/Standard.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -18,7 +18,7 @@
 <meta name="DC.Coverage.jurisdiction" content="Australia">
 <meta name="AGLS.Function" scheme="AGIFT" content="Monetary policy">
 <meta name="DC.Date.created" scheme="ISO8601" content="2001-03-28">
-<meta name="DC.Date.modified" scheme="ISO8601" content="2009-06-16">
+<meta name="DC.Date.modified" scheme="ISO8601" content="2009-08-17">
 <meta name="DC.Type.category" content="Document">
 <meta name="DC.Type.aggregationLevel" content="Item">
 <meta name="DC.Type.documentType" scheme="agls-document" content="instructional">
@@ -120,7 +120,7 @@
 	   <td align="right" valign="bottom" bgcolor="#000066" nowrap=""><span class="top"><a href="http://search.rba.gov.au/search" title="Search" accesskey="4">Search</a>&nbsp;|&nbsp;<a href="/SiteMap/index.html" title="Site Map" accesskey="1">Site&nbsp;Map</a>&nbsp;|&nbsp;<a href="/Glossary/index.asp" title="Glossary of Terms and Abbreviations" accesskey="Y">Glossary</a>&nbsp;|&nbsp;<a href="/Careers/index.html" title="Careers">Careers</a>&nbsp;|&nbsp;<a href="/Links/index.html" title="Links" accesskey="L">Links</a>&nbsp;|&nbsp;<a href="/FAQ/index.html" title="FAQ" accesskey="5">FAQ</a>&nbsp;|&nbsp;<a href="/Contact/index.html" title="Contact Us" accesskey="U">Contact Us</a></span>&nbsp;<a href="mailto:rbainfo@rba.gov.au" accesskey="7"></a><a href="/index.html" accesskey="2"></a><a href="/EventsDiary/index.html" accesskey="N"></a><a href="/FAQ/index.html" title="FAQ" accesskey="8"></a></td>
 	 </tr>
 	 <tr> 
-	   <td height="23" bgcolor="#000066" nowrap=""><script language="JavaScript1.2" type="text/javascript">path_bar()</script><span class="top"><strong><font color="#ffffff"><a href="/">Home</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../../../">web</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../../">20090619051728id_</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../">http%3A</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../"></a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../">www.rba.gov.au</a></font></strong></span><strong><font color="White">&nbsp;•&nbsp;</font></strong><span class="toporange"><strong>Privacy Statement</strong></span>&nbsp;</td>
+	   <td height="23" bgcolor="#000066" nowrap=""><script language="JavaScript1.2" type="text/javascript">path_bar()</script><span class="top"><strong><font color="#ffffff"><a href="/">Home</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../../../">web</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../../">20091028093904id_</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../">http%3A</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../"></a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../">www.rba.gov.au</a></font></strong></span><strong><font color="White">&nbsp;•&nbsp;</font></strong><span class="toporange"><strong>Privacy Statement</strong></span>&nbsp;</td>
 	   <td>&nbsp;</td>
 	 </tr>
 	 <tr> 
@@ -272,7 +272,7 @@ Contents
         <tbody><tr> 
           <td width="20" valign="top" nowrap="">&nbsp;</td>
           <td valign="top" nowrap=""><strong>E-mail</strong></td>
-          <td><a href="mailto:recruitment@rba.gov.au">recruitment@rba.gov.au</a></td>
+          <td><a href="mailto:careers@rba.gov.au">careers@rba.gov.au</a></td>
         </tr>
         <tr> 
           <td width="20" valign="top" nowrap="">&nbsp;</td>
