--- a/k/km/kma/kmart.com.au.html
+++ b/k/km/kma/kmart.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kmart.com.au privacy policy that was archived on 2009-02-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090206024320id_/http%3A//www.kmart.com.au/about/privacypolicy/default.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kmart.com.au privacy policy that was archived on 2009-10-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091030020556id_/http%3A//www.kmart.com.au/about/privacypolicy/default.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <title>
@@ -24,7 +24,7 @@
                 &nbsp;</div>
             
 		<div id="header">	
-			<a href="/" title="Kmart Homepage"><img src="/images/layout/Kmart_Where_Good_Times_Start_logo.gif" id="kmartlogo" alt="Kmart - where good times start"></a>
+			<a href="/" title="Kmart Homepage"><img src="/images/layout/Kmart_Where_Good_Times_Start_logo.gif" id="kmartlogo" alt="Kmart"></a>
 			
 			
 			
@@ -64,9 +64,10 @@
 			
 					</div><!-- redboxContainer -->			
 					
-		<div id="leftnav"><a name="nav"></a>
-			<h3 class="hidden">MAIN MENU</h3>
-			<ul class="leftmenu">
+<div id="leftnav">
+  <a name="nav"></a>
+  <h3 class="hidden">MAIN MENU</h3>
+  <!-- Using Pregenerated Menu --><ul class="leftmenu">
 <li><a title="Home" href="/default.asp" id="leftmenu-home"><span class="replacement"></span><span class="hideText">Home</span></a></li>
 <li><a title="Catalogue" href="/catalogue/" id="leftmenu-catalogue"><span class="replacement"></span><span class="hideText">Catalogue</span></a>
 </li>
@@ -76,6 +77,8 @@
 </li>
 <li><a title="Our Products" href="/ourproducts/automotive/default.asp" id="leftmenu-ourproducts"><span class="replacement"></span><span class="hideText">Our Products</span></a>
 </li>
+<li><a title="Kmart Photo Centre" href="/ourproducts/Kmart_Photo_Centre/default.asp" id="leftmenu-KmartPhotoCentre"><span class="replacement"></span><span class="hideText">Kmart Photo Centre</span></a></li>
+<li><a target="_blank" title="KTAS" href="http://www.ktas.com.au" id="leftmenu-ktas"><span class="replacement"></span><span class="hideText">KTAS</span></a></li>
 <li><a title="Subscribe to KMail" href="/membership/registration.asp" id="leftmenu-subscribetokmail"><span class="replacement"></span><span class="hideText">Subscribe to KMail</span></a>
 </li>
 <li><a title="Careers" href="/careers/default.asp" id="leftmenu-careers"><span class="replacement"></span><span class="hideText">Careers</span></a>
@@ -84,12 +87,15 @@
 </li>
 <li><a title="About Kmart" href="/about/kmartstory/default.asp" id="leftmenu-aboutkmart"><span class="replacement"></span><span class="hideText">About Kmart</span></a>
 </li>
+<li><a title="Price Promise" href="/pricepromise/default.asp" id="leftmenu-pricepromise"><span class="replacement"></span><span class="hideText">Price Promise</span></a></li>
 <li><a title="Returns Policy" href="/about/returnspolicy/default.asp" id="leftmenu-returnspolicy"><span class="replacement"></span><span class="hideText">Returns Policy</span></a></li>
 <li><a title="Contact Us" href="/contactus/default.asp" id="leftmenu-contactus"><span class="replacement"></span><span class="hideText">Contact Us</span></a>
 </li>
 </ul>
 
-		</div><!-- leftnav -->
+</div>
+<!-- leftnav -->
+
             <div id="content">
                 <a name="content"></a>
                 <h3 class="hidden">
@@ -176,7 +182,7 @@
 			
 			<div class="hidden"><h3>AFFILIATES:</h3></div>
 			<div id="affiliatelinks">
-				<ul class="affiliate">
+				<!-- Using Pregenerated Menu --><ul class="affiliate">
 <li class="removeborder"><a target="_blank" title="Kmart New Zealand" href="http://www.kmart.co.nz">Kmart New Zealand</a></li>
 <li><a target="_blank" title="Kmart Tyre &amp; Auto Service" href="http://www.ktas.com.au/">Kmart Tyre &amp; Auto Service</a></li>
 <li><a target="_blank" title="Wesfarmers Limited" href="http://www.wesfarmers.com.au">Wesfarmers Limited</a></li>
@@ -191,18 +197,32 @@
 		</div><!-- divaffiliate -->
 		<div id="divfooter">
 			<h3 class="hidden">FOOTER</h3>
-			<ul class="footer">
+			<!-- Using Pregenerated Menu --><ul class="footer">
 <li class="removeborder"><a title="© Kmart Australia Ltd. ABN 73 004 700 485" href="/about/disclaimer/default.asp">© Kmart Australia Ltd. ABN 73 004 700 485</a></li>
 </ul>
 
-		</div><!-- divfooter -->					
-	<script language="JavaScript" src="/include/javascript/sdctag1.js" type="text/javascript"></script>
-	<script language="JavaScript" src="/include/javascript/sdctag2.js" type="text/javascript"></script>
-
-	<noscript>
+		</div><!-- divfooter -->
+		<!-- Core Metrics tracking code -->
+		<script language="javascript1.1" src="/include/javascript/coremetrics/eluminate.js"></script>
+		<script language="javascript1.1" src="/include/javascript/coremetrics/cmdatatagutils.js"></script>
+		<script language="javascript1.1" src="/include/javascript/coremetrics/cmtaggingservices.js"></script>
+		<!-- Web Trends tracking code -->
+		<script language="JavaScript" src="/include/javascript/sdctag1.js" type="text/javascript"></script>
+		<script language="JavaScript" src="/include/javascript/sdctag2.js" type="text/javascript"></script>
+		<noscript>
 		<img alt="" id="wt-noscript-image" name="DCSIMG" src="http://statse.webtrendslive.com/dcsoie3my0000004zlzixvduk_5t6e/njs.gif?dcsuri=/nojavascript%26WT.js=No" />
-	</noscript>
-
+		</noscript>
+		<!-- Google Analytics tracking code -->
+		<script type="text/javascript">
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+		</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+		<script type="text/javascript">
+		try {
+		var pageTracker = _gat._getTracker("UA-7745282-1");
+		pageTracker._trackPageview();
+		} catch(err) {}
+		</script>
 <!--[if IE]></div><![endif]-->
 <!--[if IE]></div><![endif]-->
 
